--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,20 @@
+.grid__container {
+  display: grid;
+  /*
+      We'll have at least 6 rows 
+         Nav
+         Head
+         About Me
+         Portfolio
+         Contact
+         Footer
+    */
+  grid-template-rows: [nav-start]80vw[nav-end] [header-start] 80vw [header-end] [about-start] 40vw [about-end] [portfolio-start]80vw [portfolio-end] [contact-start]min-content [contact-end] [footer-start]80vw [footer-end];
+  grid-template-columns:
+    [full-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+    [full-end];
+}
+
 //ABOUT SECTION BEGINS----------------------------------
 .section-about {
   background-color: pink;
